# discord-bot-hooni

./: .env.example  .gitignore  llm.py  main.py  pyproject.toml  requirements.txt  start-hooni.sh  stt.py  tts.py  voice_handler.py
