[project]
name = "discord-bot-hooni"
version = "0.1.0"
description = "후니 - Discord 음성 대화 봇"
requires-python = ">=3.11"
dependencies = [
    "discord-py[voice]>=2.4.0",
    "discord-ext-voice-recv>=0.5.0",
    "faster-whisper>=1.0.0",
    "groq>=0.11.0",
    "edge-tts>=6.1.0",
    "webrtcvad-wheels>=2.0.10",
    "numpy>=1.24.0",
]
